--- a/game.html
+++ b/game.html
@@ -174,8 +174,8 @@
 		<i class="fas fa-volume-mute"></i>
 	</div>
 
-<audio id="mainAudio" src="music/minus.mp3" autoplay loop></audio>
-<audio id="finalAudio" src="music/finalmusic.mp3" autoplay loop></audio>
+<audio id="mainAudio" src="music/minus.mp3" loop></audio>
+<audio id="finalAudio" src="music/finalmusic.mp3" loop></audio>
 <audio id="failMusic" src="music/fail.mp3" autoplay></audio>
 <audio id="wellMusic" src="music/well.mp3" autoplay></audio>
 	<script src="js/index.js"></script>
