--- a/game.html
+++ b/game.html
@@ -176,8 +176,8 @@
 
 <audio id="mainAudio" src="music/minus.mp3" loop></audio>
 <audio id="finalAudio" src="music/finalmusic.mp3" loop></audio>
-<audio id="failMusic" src="music/fail.mp3" autoplay></audio>
-<audio id="wellMusic" src="music/well.mp3" autoplay></audio>
+<audio id="failMusic" src="music/fail.mp3"></audio>
+<audio id="wellMusic" src="music/well.mp3"></audio>
 	<script src="js/index.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 </body>
